--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -2,8 +2,12 @@
 
 \input{core/core.tex}
 \input{core/format.tex}
-\input{modules/(* module.id *)/styles/(* competition.id *)/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/format.tex}
+\input{modules/(* module.id *)/styles/(* competition.id *)/settings.tex}
+
+\input{input/(* module.id *)/format-root.tex}
+\input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
+\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/format-volume.tex}
+\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/format-round.tex}
 
 \newcounter{volume}
 \newcounter{semester}
@@ -11,14 +15,12 @@
 \newcounter{problem}
 
 \begin{document}            
-    \pagestyle{main}
+    \pagestyle{problems-(* competition.id *)-(* volume.id *)-(* semester.id *)-(* round.id *)}
     \thispagestyle{first}
     \vspace*{2em}
    
     \section{\texorpdfstring{Riešenia (* round.id *). kola (* semester.genitive *) časti}{Riešenia}}
         
-    \pagestyle{solutions}    
-
     (@ for pid, problem in round.problems.items() @)%
     \setcounter{volume}{(* volume.number *)}%
     \setcounter{semester}{(* semester.number *)}%
