Intro and rules are now fully templated as well

--- a/modules/seminar/styles/FKS/templates/intro.tex
+++ b/modules/seminar/styles/FKS/templates/intro.tex
@@ -16,7 +16,7 @@ nosia cenné medaily.
 
 Súťaž prebieha korešpondenčnou formou. V~rukách držíte zadania prvej série úloh.
 Ich riešenia (\emph{celý postup, nie len výsledok}) nám pošlite do stanoveného termínu
-buď poštou, alebo elektronicky (\URL{(* seminar.submitURL *)}). Riešenia opravíme,
+buď poštou, alebo elektronicky (\URL{(* competition.submitURL *)}). Riešenia opravíme,
 obodujeme a spolu so vzorovými riešeniami pošleme späť. Takto prebehnú do
 decembra tri série súťaže, na základe ktorých vyberieme tých najlepších na
 januárové sústredenie (prvých 12 z~každej kategórie, v~prípade nezáujmu
@@ -28,6 +28,6 @@ venovaných fyzike zažijete skvelú zábavu, akčné hry, večery pri gitare,
 nechýbajú ani divadlá, počúvanie poplašných správ v~dedinskom rozhlase, nočná
 hra, \dots\ Hlavne však spoznáte skvelých ľudí! Ak aj fyzika nebola vždy vašou
 obľúbenou disciplínou, zistíte, že fyzici sú super.  Všetky informácie o~FKS
-vrátane fotiek zo sústredka nájdeš na \URL{(* seminar.URL *)}.
+vrátane fotiek zo sústredka nájdeš na \URL{(* competition.URL *)}.
 
 \hfill \emph{Veľa zdaru Ti prajú Tvoji vedúci!}%
