Added constants, fixed barcodes and such

--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -9,7 +9,7 @@
     \fancyfoot[LO,RE]{\href{mailto:(* i18n.competition.email *)}{\texttt{(* i18n.competition.email *)}}}
     \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\URL{(* i18n.competition.website *)}}
-    \titleformat{\section}[hang]{\centering\huge\vspace*{-1.5ex}}{}{0pt}{}
+    \titleformat{\section}[hang]{\centering\huge\vspace*{-7mm}}{}{0pt}{}
     \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
     \titlespacing*{\section}{0pt}{0pt}{8pt}
