--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -40,9 +40,8 @@
                     \begin{minipage}[t][81mm][t]{0.125\linewidth}\vspace{0pt}%
                         \hspace{1mm}
                         \rotatebox{90}{%
-                            \fontsize{30}{0}\selectfont
-                            \hspace{10mm}
-                            \textsf{(* '%06d'|format(team.id) *)(* '%03d'|format(problem.number) *)}
+                            \hspace{16mm}
+                            \textsf{\fontsize{20}{0}\selectfont(* '%03d'|format(venue.number) *)\fontsize{30}{0}\selectfont(* '%03d'|format(team.id) *)\fontsize{20}{0}\selectfont(* '%03d'|format(problem.number) *)}
                         }%
                         \hspace{1mm}
                         \rotatebox{90}{%
