--- a/core/hacks.tex
+++ b/core/hacks.tex
@@ -1,14 +1,27 @@
 \makeatletter
 
-% Change allocator to allow more than 16 alphabets per document
-    \def\new@mathgroup{\alloc@8\mathgroup\mathchardef\@cclvi}
-    \patchcmd{\document@select@group}{\sixt@@n}{\@cclvi}{}{}
-    \patchcmd{\select@group}{\sixt@@n}{\@cclvi}{}{}
-
 % Render percent sign with nice font, not ugly Computer modern
     \mathcode`\%="7025
-    \mathcode`\;="603B
 
+    \ernewcommand\eu@MathPunctuation@symfont{Latin:m:n}
+    \DeclareMathSymbol{,}{\mathpunct}{\eu@MathPunctuation@symfont}{`,}
+    \DeclareMathSymbol{.}{\mathord}{\eu@MathPunctuation@symfont}{`.}
+    \DeclareMathSymbol{<}{\mathrel}{\eu@MathPunctuation@symfont}{`<}
+    \DeclareMathSymbol{>}{\mathrel}{\eu@MathPunctuation@symfont}{`>}
+    \DeclareMathSymbol{/}{\mathord}{\eu@MathPunctuation@symfont}{`/}
+    \DeclareMathSymbol{;}{\mathpunct}{\eu@MathPunctuation@symfont}{`;}
+    \XeTeXDeclareMathSymbol{^^^^2026}{\mathinner}{\eu@MathPunctuation@symfont}{"2026}[\mathellipsis]
+    \DeclareMathSymbol{0}{\mathalpha}{\eu@DigitsArabic@symfont}{`0}
+    \DeclareMathSymbol{1}{\mathalpha}{\eu@DigitsArabic@symfont}{`1}
+    \DeclareMathSymbol{2}{\mathalpha}{\eu@DigitsArabic@symfont}{`2}
+    \DeclareMathSymbol{3}{\mathalpha}{\eu@DigitsArabic@symfont}{`3}
+    \DeclareMathSymbol{4}{\mathalpha}{\eu@DigitsArabic@symfont}{`4}
+    \DeclareMathSymbol{5}{\mathalpha}{\eu@DigitsArabic@symfont}{`5}
+    \DeclareMathSymbol{6}{\mathalpha}{\eu@DigitsArabic@symfont}{`6}
+    \DeclareMathSymbol{7}{\mathalpha}{\eu@DigitsArabic@symfont}{`7}
+    \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
+    \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
+    \DeclareMathSymbol{,}{\mathpunct}{\eu@MathPunctuation@symfont}{`,}
 \makeatother
 
 % Fix Pandoc's tightlist problem
