--- a/core/hacks.tex
+++ b/core/hacks.tex
@@ -3,6 +3,7 @@
 % Render percent sign with nice font, not ugly Computer modern
     \mathcode`\%="7025
 
+% Fixes mathspec bug -- URL numbers are rendered with wrong font
     \ernewcommand\eu@MathPunctuation@symfont{Latin:m:n}
     \DeclareMathSymbol{,}{\mathpunct}{\eu@MathPunctuation@symfont}{`,}
     \DeclareMathSymbol{.}{\mathord}{\eu@MathPunctuation@symfont}{`.}
