--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -1,10 +1,17 @@
 section:
-    problems:       'Problems'
-    solutions:      'Solutions'
-    answers:        'Answers'
+    problems:           'Problems'
+    solutions:          'Solutions'
+    answers:            'Answers'
+    constants:          'Table of constants'
 competition:
     name:
         nominative:     'Physics Náboj'
         genitive:       'Physics Náboj'
     email:              'info-en@physics.naboj.org'
     website:            'https://physics.naboj.org/'
+constants:
+    title:              'Table of constants'
+    instruction:        'We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \textbf{will} be accepted.'
+    constant:           'Constant'
+    symbol:             'Symbol'
+    value:              'Value'
