--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -2,6 +2,7 @@ section:
     problems:           'Zadania'
     solutions:          'Vzorové riešenia'
     answers:            'Výsledky'
+    constants:          'Tabuľka konštánt'
 competition:
     name:
         nominative:     'Fyzikálny Náboj'
@@ -9,3 +10,9 @@ competition:
     email:              'info-sk@physics.naboj.org'
     website:            'https://physics.naboj.org/'
 team:                   'Tím'
+constants:
+    title:              'Tabuľka konštánt'
+    instruction:        'Počas Náboja odporúčame používať hodnoty konštánt z~tejto tabuľky. Výsledok získaný s použitím presnejších hodnôt Vám však určite \textbf{bude} uznaný.'
+    constant:           'Konštanta'
+    symbol:             'Značka'
+    value:              'Hodnota'
