--- a/modules/naboj/templates/constants.tex
+++ b/modules/naboj/templates/constants.tex
@@ -6,16 +6,17 @@
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
 
 \begin{document}
-    \pagestyle{main}
+    \pagestyle{constants}
     \renewcommand{\arraystretch}{1.3}
-    \section{Tabuľka konštánt}
-    \emph{Počas Náboja odporúčame používať hodnoty konštánt z~tejto tabuľky. Výsledok získaný s použitím presnejších hodnôt vám však určite bude uznaný.}
+    \section{(* i18n.constants.title *)}
+    \emph{(* i18n.constants.instruction *)}
+    \vspace*{10mm}
 
     \begin{figure}[H]
         \centering
         \begin{tabular}{l c c}
             \toprule
-                Konštanta & Značka & Hodnota \\
+                (* i18n.constants.constant *) & (* i18n.constants.symbol *) & (* i18n.constants.value *) \\
             \midrule
             \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/constants-table.tex}
             \bottomrule
