Megapack for Náboj, mostly minor fixes

--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -74,3 +74,6 @@
     \titleformat{\subsection}[hang]{\bfseries}{}{0pt}{}[]
 }
 \setcounter{secnumdepth}{0}
+
+\captionsetup[table]{name=(* i18n.caption.table *)}
+\captionsetup[figure]{name=(* i18n.caption.figure *)}
