--- a/modules/naboj/templates/booklet-normal.tex
+++ b/modules/naboj/templates/booklet-normal.tex
@@ -9,6 +9,11 @@
 \newcounter{problem}
  
 \begin{document}
+    \thispagestyle{first}
+    \vspace*{15mm}
+    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/intro.tex}
+    \newpage
+
     \pagestyle{main}
     \section{(* i18n.section.problems *)}
     \pagestyle{problems}    
