--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -3,6 +3,9 @@ section:
     solutions:          'Solutions'
     answers:            'Answers'
     constants:          'Table of constants'
+caption:
+    table:              'Table'
+    figure:             'Figure'
 competition:
     name:
         nominative:     'Physics Náboj'
