--- a/modules/naboj/templates/i18n/hungarian.yaml
+++ b/modules/naboj/templates/i18n/hungarian.yaml
@@ -3,6 +3,9 @@ section:
     solutions:          'Megoldások'
     answers:            'Válaszok'
     constants:          'Konstansok táblázata'
+caption:
+    table:              'Táblázat'
+    figure:             'Ábra'
 competition:
     name:
         nominative:     'Náboj Fizika'
