--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -3,6 +3,9 @@ section:
     solutions:          'Rozwiązania'
     answers:            'Odpowiedzi'
     constants:          'Tabela stałych'
+caption:
+    table:              'Tabela'
+    figure:             'Figura'
 competition:
     name:
         nominative:     'Nabój Fizyczny'
