--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -3,6 +3,9 @@ section:
     solutions:          'Vzorové riešenia'
     answers:            'Výsledky'
     constants:          'Tabuľka konštánt'
+caption:
+    table:              'Tabuľka'
+    figure:             'Obrázok'
 competition:
     name:
         nominative:     'Fyzikálny Náboj'
