Náboj fixes, changed @P

--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -37,6 +37,11 @@
     \fancyhead[LE,RO]{\textit{(* i18n.section.constants *)}}
 }
 
+\fancypagestyle{instructions}{%
+    \pagestyle{main}
+    \fancyhead[LE,RO]{\textit{(* i18n.section.instructions *)}}
+}
+
 \fancypagestyle{rules}{%
     \pagestyle{main}
     \fancyhead[LE,RO]{\textit{Pravidlá}}
