--- a/modules/naboj/templates/answers.tex
+++ b/modules/naboj/templates/answers.tex
@@ -7,23 +7,16 @@
 
 \newcounter{volume}
 \newcounter{problem}
-
-\begin{document}            
+ 
+\begin{document}
     \pagestyle{main}
-    \thispagestyle{first}
-    \vspace*{19mm}
-   
     \section{(* i18n.section.answers *)}
     \pagestyle{answers}
-    (@ for modulo in volume.problemsMod @)
-        \newpage%
-        \section{Modulo (* loop.index0 *)}
-        (@ for problem in modulo @)%
-            \setcounter{volume}{(* volume.number *)}%
-            \setcounter{problem}{(* problem.number *)}%
-            \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
-            \subsection{(* problem.number *)}%
-            \protectedInput{\problemDirectory/answer.tex}%
-        (@ endfor @)
+    (@ for problem in volume.problems @)%
+        \setcounter{volume}{(* volume.number *)}%
+        \setcounter{problem}{(* problem.number *)}%
+        \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
+        \subsection{(* problem.number *)}%
+        \protectedInput{\problemDirectory/answer.tex}%
     (@ endfor @)
 \end{document}
