--- a/core/core.tex
+++ b/core/core.tex
@@ -33,7 +33,6 @@
 \RequirePackage{color}
 \RequirePackage{float}
 \RequirePackage{caption}
-\RequirePackage{skull}
 \RequirePackage{booktabs}
 \RequirePackage{titlesec}
 \RequirePackage{afterpage}
@@ -44,7 +43,6 @@
 \RequirePackage{hyphenat}
 \RequirePackage{fancyvrb}                                   % fancy verbatim (currently unused)
 
-\RequirePackage[f]{esvect}                                  % nicer vector overset
 \RequirePackage[all]{nowidow}
 \RequirePackage{boolexpr}                                   % boolean expressions, switch
 \RequirePackage[MnSymbol]{mathspec}                         % includes fontspec
@@ -83,6 +81,8 @@
 \input{core/fonts.tex}
 \input{core/utilities.tex}
 \input{core/hacks.tex}
+
+%\RequirePackage[f]{esvect}                                  % nicer vector overset
 
 % \insertPicture{filename}{extension}{(ignored)}{height}{caption}{label}
 % Insert a picture, protected against nonexistent files
