Náboj and module.mk updates

--- a/modules/naboj/templates/cover.tex
+++ b/modules/naboj/templates/cover.tex
@@ -6,6 +6,7 @@
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
 
 \newgeometry{
+    paper = a4paper,
     left = 20mm,
     right = 20mm,
     bottom = 20mm,
