--- a/core/core.tex
+++ b/core/core.tex
@@ -41,6 +41,7 @@
 \RequirePackage{MnSymbol}
 \RequirePackage{fancyhdr}
 \RequirePackage{hyphenat}
+\RequirePackage{pifont}
 \RequirePackage{fancyvrb}                                   % fancy verbatim (currently unused)
 
 \RequirePackage[all]{nowidow}
