--- a/modules/seminar/format-competition.tex
+++ b/modules/seminar/format-competition.tex
@@ -4,7 +4,7 @@
 \fancypagestyle{main-(* competition.id *)}{
     \pagestyle{main}
     \fancyhead[LO,RE]{\raisebox{(* competition.hacks.smallLogoRaise *)}{\includegraphics[keepaspectratio = true, height = 6mm]{modules/seminar/styles/(* competition.id *)/logo/logo.pdf}}}
-    \fancyhead[LE,RO]{(* competition.full.nominative *)}
+    \fancyhead[LE,RO]{\textit{(* competition.full.nominative *)}}
     \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
     \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\URL{(* competition.URL *)}}
