Fixed hotfix remnants

--- a/modules/seminar/format-round.tex
+++ b/modules/seminar/format-round.tex
@@ -4,9 +4,11 @@
 \fancypagestyle{problems-(* competition.id *)-(* volume.id *)-(* semester.id *)-(* round.id *)}{%
     \pagestyle{main-(* competition.id *)}
     \fancyhead[LE,RO]{\textit{Zadania (* round.number *). kola (* semester.genitive *) časti -- (* round.deadline.strftime('%d. %m. %Y') *)}}
+    \titleformat{\subsection}[hang]{\large}{\bfseries\arabic{round}.\arabic{problem}}{6pt}{}[]
 }
 
 \fancypagestyle{solutions-(* competition.id *)-(* volume.id *)-(* semester.id *)-(* round.id *)}{%
     \pagestyle{main-(* competition.id *)}
     \fancyhead[LE,RO]{\textit{Riešenia (* round.number *). kola (* semester.genitive *) časti}}
+    \titleformat{\subsection}[hang]{\large}{\bfseries\arabic{round}.\arabic{problem}}{6pt}{}[]
 }
