--- a/modules/seminar/templates/invite.tex
+++ b/modules/seminar/templates/invite.tex
@@ -20,7 +20,7 @@
 
         v~korešpondenčnej časti si dosiah(* 'ol' if child.male else 'la' *) výborné výsledky,
         gratulujeme a~týmto Ťa pozývame ako \textbf{(* 'náhradní' if child.substitute else 'účastní' *)(* 'ka' if child.male else 'čku' *)}
-        na (* semester.nominativeNeuter *) sústredenie (* volume.number *). ročníka (* competition.short *).
+        na~(* semester.nominativeNeuter *) sústredenie (* volume.number *). ročníka (* competition.short *).
         Prosím, vyplň prihlášku čo najrýchlejšie, \textbf{a to aj v~prípade, že na sústredenie neprídeš}.
 
     \subsection{Informácie}
